--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
-types/interfaces for Todos.tsx (state and todosArray)
 
 error handling - toastify?
 
 auth validation
+
+add delete where firestore
